--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,29 @@ margin-top: 5%;
     margin-left: 250px;
    font-size: 20px;
    position:absolute;
-   top: 400px;
+   top: 300px;
 }
+#display-image{
+    width: auto;
+    height: 550px;
+    border: 5px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    
+    background-position: center;
+    background-size: cover;
+  }
 
+#image-input{
+    border: 0.5px solid #8e8f8e;
+    border-radius: 10px;
+    color: #053a0c;
+ }
+ #image-input::file-selector-button{
 
+    background: linear-gradient(to bottom right, #4a5e26, #053a0c);
+border: 0;
+border-radius: 12px;
+color: #FFFFFF;
+cursor: pointer; 
+
+}
